<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ModBus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="kongzhi">控制面板</string>
    <string name="celiang">测量面板</string>
    <string name="lianjie">点击连接服务器</string>
    <string name="shezhi">设置面板</string>
    <string name="benji">GU620通信连接</string>
    <string name="fuwuqi">与服务器通信状态：</string>
    <string name="dizhi">服务器IP</string>
    <string name="duankou">通信端口</string>
    <string name="xuanze">点击选择测量项目</string>
    <string name="shishiceliang">实时测量值</string>
    <string name="liangcheng">量程</string>
    <string name="biaoding">标定值</string>
</resources>
