<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    
  <RelativeLayout 
    android:id="@+id/tab01"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     
    
>
         <Button
            android:id="@+id/bn8"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/bn11"
            android:layout_toLeftOf="@+id/bn11"
            android:text="@string/shezhi" />
         <Button
            android:id="@+id/bn9"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" 
            android:text="@string/celiang" />
         <Button
	        android:id="@+id/button1"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toStartOf="@+id/bn8"
            android:layout_toLeftOf="@+id/bn8"
	         android:text="@string/benji" />

         <Button
             android:id="@+id/bn11"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/bn9"
             android:layout_toLeftOf="@+id/bn9"
             android:text="@string/kongzhi" />
       
</RelativeLayout>

<!-- 以上是界面第一行 --> 
  
  
  
  <RelativeLayout 
    android:id="@+id/tab02"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     
    
>
 <TextView
        android:id="@+id/View1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        style="?android:attr/buttonStyleSmall"
        
        android:text="@string/dizhi" />

    <TextView
        android:id="@+id/View2"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/View1" 
        android:layout_toRightOf="@+id/View1"
        android:background="@drawable/setbar_bg"
        android:text="" />
       
</RelativeLayout>
  
<!-- 以上是界面第2行 -->  
    
   
     <RelativeLayout 
    android:id="@+id/tab03"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     
    
>
 <TextView
        android:id="@+id/View3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/duankou" />

    <TextView
        android:id="@+id/View4"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/View3" 
        android:layout_toRightOf="@+id/View3"
        android:background="@drawable/setbar_bg"
        android:text="" />
       
</RelativeLayout>
  
<!-- 以上是界面第3行 -->  

 <RelativeLayout 
    android:id="@+id/tab04"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     
    
>
   
    <TextView
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/setbar_bg"
        android:text="@string/fuwuqi" />
    <Button
            android:id="@+id/bn18"
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/lianjie" />
</RelativeLayout>
</LinearLayout>